[NM] Change sn bg color for skip link to follow new palette

--- a/toolkits/global/packages/global-skip-link/scss/10-settings/_springernature.scss
+++ b/toolkits/global/packages/global-skip-link/scss/10-settings/_springernature.scss
@@ -10,4 +10,4 @@ $skip-link--padding-y: spacing(8);
 $skip-link--font-size: 1.6rem;
 $skip-link--color: color('white');
 $skip-link--hover-color: color('white');
-$skip-link--background-color: color('gunmetal-blue');
+$skip-link--background-color: color('universal-blue');
