[NM] new sn colors on SN  settings

--- a/context/brand-context/springernature/scss/10-settings/buttons.scss
+++ b/context/brand-context/springernature/scss/10-settings/buttons.scss
@@ -14,7 +14,7 @@ $context--button-padding-large: 10px 35px;
 $context--button-letter-spacing: 0.7px;
 $context--button-font-family: $context--font-family-sans;
 $context--button-transition: all 0.2s;
-$context--button-brand-color: color('gunmetal-blue');
+$context--button-brand-color: color('universal-blue');
 
 /**
  * Button Themes
