--- a/context/brand-context/springernature/scss/10-settings/links.scss
+++ b/context/brand-context/springernature/scss/10-settings/links.scss
@@ -1,5 +1,5 @@
 $context--link-color: color('blue');
-$context--link-hover-color: color('blue-light');
+$context--link-hover-color: color('universal-blue');
 $context--link-visited-color: color('purple');
 $context--link-active-color: color('black');
 
