--- a/context/brand-context/springernature/scss/10-settings/tables.scss
+++ b/context/brand-context/springernature/scss/10-settings/tables.scss
@@ -1,4 +1,4 @@
-$context--table-header-border-bottom: 3px solid color('gunmetal-blue');
+$context--table-header-border-bottom: 3px solid color('universal-blue');
 $context--table-row-border-bottom: 2px solid $context--border-color;
 $context--table-border: none;
 $context--table-font-size: $context--font-size-md;
