[NM] fix link colors

--- a/context/brand-context/springernature/scss/10-settings/links.scss
+++ b/context/brand-context/springernature/scss/10-settings/links.scss
@@ -1,4 +1,4 @@
-$context--link-color: color('blue');
+$context--link-color: color('medium-blue');
 $context--link-hover-color: color('universal-blue');
 $context--link-visited-color: color('purple');
 $context--link-active-color: color('black');
