add larger text size option
- settings for default and nature brand

--- a/toolkits/global/packages/global-meta/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-meta/scss/10-settings/_default.scss
@@ -4,6 +4,7 @@
  */
 
 $meta--font-size: 14px;
+$meta--font-size-large: 16px;
 $meta--font-family: inherit;
 $meta--line-height: inherit;
 $meta--padding-right: 0.5em;
