--- a/toolkits/global/packages/global-meta/scss/10-settings/_nature.scss
+++ b/toolkits/global/packages/global-meta/scss/10-settings/_nature.scss
@@ -7,6 +7,8 @@
 @import 'default';
 
 $meta--font-family: $context--font-family-sans;
+$meta--font-size: $context--font-size-xs;
+$meta--font-size-large: 1.6rem;
 $meta--border: 1px solid #bbb;
 $meta--color: inherit;
 $meta--line-height: 1.4;
