Adds keyline utility classname to default brand context and refactors keyline mixin to allow thickness to be configured and to reference spacing from keyline setting var

--- a/context/brand-context/default/scss/10-settings/style.scss
+++ b/context/brand-context/default/scss/10-settings/style.scss
@@ -7,6 +7,7 @@
 @import '../20-functions/colors';
 
 // Keyline
+$context--keyline-spacing: spacing(16);
 $context--keyline-border-color: greyscale(70);
 
 // Shadow
