--- a/context/brand-context/springer/scss/abstracts.scss
+++ b/context/brand-context/springer/scss/abstracts.scss
@@ -6,8 +6,8 @@
 
 // These settings must come first, as other settings can reference them
 @import '10-settings/colors/default';
+@import '10-settings/style';
 @import '10-settings/typography';
-
 @import '10-settings/buttons';
 
 @import '20-functions/em';
