--- a/toolkits/global/packages/global-meta/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-meta/scss/10-settings/_default.scss
@@ -7,10 +7,9 @@ $meta--font-size: 14px;
 $meta--font-size-large: 16px;
 $meta--font-family: inherit;
 $meta--line-height: inherit;
-$meta--padding-right: 0.5em;
-$meta--margin-right: 0.5em;
-$meta--border: 1px solid #eee;
+$meta--keyline-spacing: 8px;
 $meta--color: #222;
 $meta--margin-bottom: 10px;
+$meta--margin-bottom-large: 20px;
 $meta--font-weight: 700;
 $meta--text-transform: uppercase;
