--- a/toolkits/global/packages/global-meta/scss/50-components/_meta.scss
+++ b/toolkits/global/packages/global-meta/scss/50-components/_meta.scss
@@ -8,6 +8,10 @@
 
 .c-meta--large {
 	font-size: $meta--font-size-large;
+
+	.c-meta__item {
+		margin-bottom: $meta--margin-bottom-large;
+	}
 }
 
 .c-meta__item {
@@ -15,9 +19,19 @@
 	margin-bottom: $meta--margin-bottom;
 
 	&:not(:last-child) {
-		padding-right: $meta--padding-right;
-		margin-right: $meta--margin-right;
-		border-right: $meta--border;
+		@include u-keyline('right', $meta--keyline-spacing);
+	}
+}
+
+.c-meta__item--block-sm-max {
+	@include media-query('sm', 'max') {
+		display: block;
+
+		&:not(:last-child) {
+			border-right: none;
+			margin-right: 0;
+			padding-right: 0;
+		}
 	}
 }
 
@@ -26,8 +40,9 @@
 		display: block;
 
 		&:not(:last-child) {
-			padding-right: 0;
 			border-right: none;
+			margin-right: 0;
+			padding-right: 0;
 		}
 	}
 }
