--- a/context/brand-context/nature/scss/40-base/links.scss
+++ b/context/brand-context/nature/scss/40-base/links.scss
@@ -17,6 +17,7 @@ a:hover {
 
 a:focus {
 	outline: 3px solid color('lemon');
+	-webkit-transform: translateZ(0); // reflow needed to ensure outline styles visible in Safari v13+
 }
 
 a:active {
