--- a/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
@@ -105,23 +105,26 @@
 		font-weight: bold;
 	}
 
-	&__author-popup {
+	&__author-modal {
 		background-color: #fff;
 		height: auto;
 		max-height: 95%;
-		box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.2);
-		border-radius: 3px;
-		margin: -15px 30px 30px 0;
-		padding: 30px;
-		width: 90vw;
+		margin: 0 20px 0 0;
+		padding: 0;
+		width: auto;
 		max-width: 380px;
-		position: absolute;
+		position: relative;
 		overflow: visible;
-		border-top: 3px solid #007e99;
-		border: 2px solid #00b8b0;
 
-		@include media-query('md') {
-			margin: -15px 30px 30px -15px;
+		.js & {
+			position: absolute;
+			width: 90vw;
+			border-top: 3px solid #007e99;
+			border: 2px solid #00b8b0;
+			box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.2);
+			border-radius: 3px;
+			padding: 30px;
+			margin: -15px 30px 30px 0;
 		}
 
 		.c-popup__close {
@@ -154,7 +157,7 @@
 
 		.c-popup__close,
 		.c-popup__close-text {
-			&:not(.author-popup-close) {
+			&:not(.author-modal-close) {
 				display: none;
 			}
 		}
