--- a/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
@@ -4,7 +4,7 @@
 	font-size: 0.75em;
 	margin: 0 0 20px 0;
 	background: #fff;
-	padding: 20px;
+	padding: $submission-header--padding;
 	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
 	border: 1px solid #173643;
 	border-left: 3px solid #173643;
@@ -123,7 +123,7 @@
 			border: 2px solid #00b8b0;
 			box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.2);
 			border-radius: 3px;
-			padding: 30px;
+			padding: $submission-header--padding;
 			margin: -15px 30px 30px 0;
 		}
 
