add focus style for tabindex and contenteditable attributes

--- a/context/brand-context/nature/scss/40-base/layout.scss
+++ b/context/brand-context/nature/scss/40-base/layout.scss
@@ -55,3 +55,10 @@ small {
 abbr[title] {
 	text-decoration: none;
 }
+
+[contenteditable],
+[tabindex="0"] {
+	&:focus {
+		outline: 4px solid color('action-focus');
+	}
+}
