--- a/context/brand-context/nature/scss/10-settings/colors/default.scss
+++ b/context/brand-context/nature/scss/10-settings/colors/default.scss
@@ -37,7 +37,8 @@ $context--colors: (
 	'nature-secondary': #a12a3f,
 	'nature-tertiary': #d7c8c8,
 	'action-base': #004b83,
-	'action-light': scale-color(#004b83, $lightness: 10%)
+	'action-light': scale-color(#004b83, $lightness: 10%),
+	'action-focus': #fece3e
 );
 
 // nature sub-brands
