--- a/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
@@ -105,7 +105,7 @@
 		font-weight: bold;
 	}
 
-	&__author-modal {
+	&__author-popup {
 		background-color: #fff;
 		height: auto;
 		max-height: 95%;
@@ -119,14 +119,11 @@
 		.js & {
 			position: absolute;
 			width: 90vw;
-			border-top: 3px solid #007e99;
-			border: 2px solid #00b8b0;
-			box-shadow: 0 4px 6px 2px rgba(0, 0, 0, 0.2);
-			border-radius: 3px;
+			border: 1px solid #00b8b0;
+			box-shadow: 1px 1px 5px rgba(0,0,0,.2);
 			padding: $submission-header--padding;
 			margin: -15px 30px 30px 0;
 		}
-
 		.c-popup__close {
 			@extend .u-text-hidden;
 			background-color: #666;
