Tweaks to styling for button

--- a/toolkits/springernature/packages/springernature-submission-header/view/header.hbs
+++ b/toolkits/springernature/packages/springernature-submission-header/view/header.hbs
@@ -31,7 +31,7 @@
     <div class="u-display-flex u-justify-content-space-between">
         <div>
             <button data-component-abstract-expander data-expander data-expander-target="#abstract" class="position-right abstract-expander u-hide u-js-show">View abstract</button>
-            <label for="showAbstract" class="u-js-hide abstract-expander-non-js">View abstract</label>
+            <label for="showAbstract" class="u-js-hide abstract-expander">View abstract</label>
             <input id="showAbstract" type="checkbox" hidden>
             <div data-component-abstract-expander-target id="abstract" data-test="submission-abstract" class="c-submission-details-header__abstract u-js-hide">{{{submission.abstract.html}}}</div>
         </div>
