adding a new focus-outline mixin to the default brand-context

--- a/context/brand-context/default/scss/10-settings/colors/default.scss
+++ b/context/brand-context/default/scss/10-settings/colors/default.scss
@@ -18,6 +18,8 @@ $context--foreground-dark: black;
 // light color used in foreground-color function
 $context--foreground-light: white;
 
+$context--focus-color: red;
+
 // default colors
 $context--colors: (
 	'red': red,
