--- a/context/brand-context/default/scss/abstracts.scss
+++ b/context/brand-context/default/scss/abstracts.scss
@@ -25,6 +25,7 @@
 @import '30-mixins/buttons';
 @import '30-mixins/clearfix';
 @import '30-mixins/container';
+@import '30-mixins/focus';
 @import '30-mixins/hiding';
 @import '30-mixins/icons';
 @import '30-mixins/keyframes';
