--- a/context/brand-context/nature/scss/40-base/layout.scss
+++ b/context/brand-context/nature/scss/40-base/layout.scss
@@ -58,7 +58,5 @@ abbr[title] {
 
 [contenteditable],
 [tabindex="0"] {
-	&:focus {
-		outline: 4px solid color('action-focus');
-	}
+	@include u-focus-outline();
 }
