make links in nature use the new mixin u-focus-outline for focus style. Move hack for bug in safari inside the mixin.

--- a/context/brand-context/nature/scss/40-base/links.scss
+++ b/context/brand-context/nature/scss/40-base/links.scss
@@ -16,8 +16,7 @@ a:hover {
 }
 
 a:focus {
-	outline: 3px solid color('lemon');
-	-webkit-transform: translateZ(0); // reflow needed to ensure outline styles visible in Safari v13+
+	@include u-focus-outline();
 }
 
 a:active {
