replace the focus style for input, button, select elements in forms for nature to use this new mixin

--- a/context/brand-context/nature/scss/40-base/forms.scss
+++ b/context/brand-context/nature/scss/40-base/forms.scss
@@ -7,10 +7,10 @@ fieldset {
 	border: 0;
 }
 
-input:focus,
-button:focus,
-select:focus {
-	outline: 3px solid color('lemon');
+input,
+button,
+select {
+	@include u-focus-outline();
 }
 
 button:active {
