--- a/context/brand-context/default/scss/30-mixins/focus.scss
+++ b/context/brand-context/default/scss/30-mixins/focus.scss
@@ -1,8 +1,6 @@
 @mixin u-focus-outline($reflow: false) {
 	&:focus {
 		outline: 3px solid $context--focus-color;
-		@if $reflow == true {
-			-webkit-transform: translateZ(0); // reflow needed to ensure outline styles visible in Safari v13+
-		}
+		will-change: transform;
 	}
 }
