removes unused parameters

--- a/context/brand-context/default/scss/30-mixins/focus.scss
+++ b/context/brand-context/default/scss/30-mixins/focus.scss
@@ -1,4 +1,4 @@
-@mixin u-focus-outline($reflow: false) {
+@mixin u-focus-outline() {
 	&:focus {
 		outline: 3px solid $context--focus-color;
 		will-change: transform;
