[MC] Swap Daytona w/ MerriweatherSans + use variable fonts
* BREAKING:
    * Switch springernature context fonts to Variable fonts
    * Swap Daytona with Merriweather Sans
    * Remove all springernature context fonts from the fonts folder
* Add the 2 new variable fonts into springernature context fonts folder
* Add documentation about fonts in springernature context README

--- a/context/brand-context/springernature/scss/10-settings/typography.scss
+++ b/context/brand-context/springernature/scss/10-settings/typography.scss
@@ -4,7 +4,7 @@
  */
 
 $context--font-family-serif: 'Merriweather', serif;
-$context--font-family-sans: 'Daytona', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$context--font-family-sans: 'Merriweather Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 $context--primary-text-color: color('black');
 $context--secondary-text-color: color('grey-dark2');
