--- a/toolkits/nature/packages/nature-facet/scss/50-components/facet.scss
+++ b/toolkits/nature/packages/nature-facet/scss/50-components/facet.scss
@@ -3,7 +3,7 @@
 	padding: spacing(8);
 	position: relative;
 	font-size: 1.6rem;
-	color: #222;
+	color: black;
 
 	@include media-query('sm') {
 		display: flex;
@@ -27,7 +27,7 @@
 
 .c-facet__label {
 	display: block;
-	font-weight: 700;
+	font-weight: $context--font-weight-bold;
 	white-space: nowrap;
 	margin-right: spacing(24);
 	margin-bottom: spacing(8);
@@ -66,7 +66,7 @@
 	border: 1px solid black;
 	border-radius: 3px;
 	display: flex;
-	font-weight: 400;
+	font-weight: $context--font-weight-normal;
 	margin-bottom: 0;
 	padding: spacing(8);
 	white-space: normal;
@@ -92,7 +92,6 @@
 	}
 
 	&.is-open {
-		color: #069;
 		text-decoration: none;
 
 		svg {
@@ -107,12 +106,12 @@
 }
 
 .c-facet__selected {
-	font-weight: 700;
+	font-weight: $context--font-weight-bold;
 }
 
 .c-facet__ellipsis {
 	text-overflow: ellipsis;
-    overflow: hidden;
+	overflow: hidden;
 	text-align: left;
 }
 
@@ -146,14 +145,16 @@
 .c-facet__clear-selection {
 	@include u-link-underline;
 	background: none;
-    color: white;
-    border: none;
+	color: white;
+	border: none;
 	align-self: center;
 }
 
 .c-facet__clear-all {
-	margin-right: spacing(16);
+	@include u-link-underline;
 	flex: 1 1 100%;
+	font-size: 1.4rem;
+	margin-right: spacing(16);
 	margin-bottom: spacing(16);
 	margin-top: spacing(4);
 
@@ -163,12 +164,7 @@
 		margin-bottom: 0;
 
 		@include media-query('lg') {
-			margin-bottom: 6px;
+			margin-bottom: spacing(8);
 		}
 	}
-}
-
-.c-facet__clear-all a {
-	@include u-link-underline;
-	font-size: 1.4rem;
 }
