use greyscale mixin for grey background

--- a/toolkits/nature/packages/nature-facet/scss/50-components/facet.scss
+++ b/toolkits/nature/packages/nature-facet/scss/50-components/facet.scss
@@ -1,5 +1,5 @@
 .c-facet {
-	background-color: #f3f3f3;
+	background-color: greyscale(80);
 	padding: spacing(8);
 	position: relative;
 	font-size: 1.6rem;
