Add collection info

--- a/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
@@ -113,6 +113,15 @@
 		font-weight: bold;
 	}
 
+	&__collection-title {
+		font-size: 1rem;
+	
+		&:before {
+			content: '|';
+			padding: 0 15px 0 10px;
+		}
+	}
+
 	&__author-popup {
 		background-color: #fff;
 		height: auto;
