use spacing mixin

--- a/toolkits/global/packages/global-facet/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-facet/scss/10-settings/default.scss
@@ -8,10 +8,10 @@ $facet--color: black;
 $facet--font-bold: 700;
 $facet--font-size-small: 1.4rem;
 $facet--font-size: 1.6rem;
-$facet--spacing-x-small: 4px;
-$facet--spacing-small: 8px;
-$facet--spacing-normal: 16px;
-$facet--spacing-large: 24px;
+$facet--spacing-x-small: spacing(4);
+$facet--spacing-small: spacing(8);
+$facet--spacing-normal: spacing(16);
+$facet--spacing-large: spacing(24);
 $facet--clear-font-size: $facet--font-size-small;
 $facet--button-color: black;
 $facet--button-background: white;
