--- a/toolkits/nature/packages/nature-headings/scss/50-components/headings.scss
+++ b/toolkits/nature/packages/nature-headings/scss/50-components/headings.scss
@@ -1,5 +1,18 @@
 .c-slice-heading {
-	@include u-slice-headings;
+	border-top: $headings--border-top;
+	border-bottom: $headings--border-bottom;
+	padding: $headings--padding;
+	margin-bottom: $headings--margin-bottom;
+	line-height: $headings--line-height;
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		margin-bottom: 0;
+	}	
 }
 
 .c-slice-heading--no-bt {
