--- a/toolkits/springer/packages/springer-dropdown/demo/main.scss
+++ b/toolkits/springer/packages/springer-dropdown/demo/main.scss
@@ -4,6 +4,7 @@
 //   so use relative paths here. Paths are be relative to this file.
 @import '../node_modules/@springernature/brand-context/default/scss/core.scss';
 @import '../node_modules/@springernature/brand-context/default/scss/enhanced.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/hiding.scss';
 @import '../node_modules/@springernature/brand-context/springer/scss/core.scss';
 @import '../node_modules/@springernature/brand-context/springer/scss/enhanced.scss';
 
