add initial demos (wip)

--- a/toolkits/global/packages/global-pill/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-pill/scss/10-settings/default.scss
@@ -2,6 +2,6 @@ $pill--background-color: greyscale(20);
 $pill--border-radius: 20px;
 $pill--padding: 5px 10px;
 $pill--font-weight: 700;
-$pill--color: #000;
+$pill--color: #fff;
 $pill--margin-right: 4px;
 $pill--margin-bottom: 10px;
