--- a/toolkits/global/packages/global-status-message/demo/index.hbs
+++ b/toolkits/global/packages/global-status-message/demo/index.hbs
@@ -1,4 +1,4 @@
-<div class="c-status-message{{#if boxed}} c-status-message--boxed{{/if}}{{#with type}} c-status-message--{{type}}{{/with}}">
+<div class="c-status-message{{#if boxed}} c-status-message--boxed{{/if}}{{#if type}} c-status-message--{{type}}{{/if}}">
 	{{#with iconURL}}
     <svg class="c-status-message__icon" width="24" height="24" aria-hidden="true" focusable="false">
         <use xlink:href="{{this}}"></use>
