--- a/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
@@ -23,6 +23,7 @@
 
 	.c-header__journal-logo {
 		max-width: 100%;
+		height: 24px;
 
 		@include media-query('md') {
 			max-width: 65%;
@@ -44,6 +45,7 @@
 		display: flex;
 		flex-basis: 100%;
 		flex-wrap: wrap;
+		align-items: center;
 
 		@include media-query('sm') {
 			flex-basis: 75%;
