--- a/toolkits/global/packages/global-layout-with-sidebar/demo/index.hbs
+++ b/toolkits/global/packages/global-layout-with-sidebar/demo/index.hbs
@@ -1,6 +1,6 @@
-<div class="c-with-sidebar">
+<div class="l-with-sidebar">
 	{{#if sidebar-on-left}}
-		<div class="c-with-sidebar__sidebar">
+		<div class="l-with-sidebar__sidebar">
 			{{{sidebarContent}}}
 		</div>
 		<div>
@@ -10,7 +10,7 @@
 		<div>
 			{{{mainContent}}}
 		</div>
-		<div class="c-with-sidebar__sidebar">
+		<div class="l-with-sidebar__sidebar">
 			{{{sidebarContent}}}
 		</div>
 	{{/if}}
