rename folder and remove var

--- a/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-submission-header/scss/50-components/enhanced.scss
@@ -118,7 +118,7 @@
 		background-color: #fff;
 		height: auto;
 		max-height: 95%;
-		margin: $submission-margin;
+		margin: 0 20px 0 0;
 		padding: 0;
 		width: auto;
 		max-width: 380px;
