--- a/context/brand-context/default/scss/60-utilities/buttons.scss
+++ b/context/brand-context/default/scss/60-utilities/buttons.scss
@@ -19,6 +19,10 @@
 	@include button-secondary
 }
 
+.u-button--tertiary {
+	@include button-tertiary
+}
+
 .u-button--contrast {
 	@include button-contrast
 }
@@ -33,6 +37,10 @@
 }
 
 // Button variants
+
+.u-button--xsmall {
+	@include button-xsmall;
+}
 
 .u-button--small {
 	@include button-small;
