--- a/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
@@ -1,5 +1,7 @@
 .c-header__content {
 	position: relative;
+	display: flex;
+	justify-content: space-between;
 
 	@include media-query('sm') {
 		display: flex;
@@ -22,6 +24,7 @@
 
 .c-header__site-logo {
 	padding-right: 20px;
+	border-right: 2px solid #222; // For SNAPP logo border-right
 }
 
 .c-header__journal-logo {
