[VK] Updated global header core css as per PR review comments

--- a/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
@@ -41,7 +41,7 @@
 		font-size: 2.7rem;
 	}
 
-	font-family: serif; // Font-family updated to serif
+	font-family: $context--font-family-serif;
 	line-height: 4.6rem;
 	font-size: 1.5rem;
 	white-space: nowrap; // Added no-wrap for logo title
